--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,19 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "module": "esnext",
-    "baseUrl": "./",
-    "moduleResolution": "node",
-    "paths": {
-      "@/*": [
-        "src/*"
-      ]
-    },
-    "lib": [
-      "esnext",
-      "dom",
-      "dom.iterable",
-      "scripthost"
-    ]
-  }
+  "module": "CommonJS",
+  "target": "ES6"
+},
+  "exclude": ["node_modules"]
 }
